--- a/app/views/admin/contacts/_form.html.erb
+++ b/app/views/admin/contacts/_form.html.erb
@@ -43,6 +43,13 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= form.label :readable, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.check_box :readable, class: 'form-control' %>
+    </div>
+  </div>
+
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
