--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-group row">
     <%= form.label :name, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.text_field :name, class: 'form-control pasteable' %>
+      <%= form.text_field :name, class: 'form-control' %>
     </div>
   </div>
 
@@ -28,7 +28,7 @@
       <%= render 'admin/shared/markdown_help' %>
       <div class="row" style="height: 30em;">
         <div class="col-6">
-          <%= form.text_area :description, class: 'form-control', rows: 20, "v-model" => "input", debounce: 50 %>
+          <%= form.text_area :description, class: 'form-control pasteable', rows: 20, "v-model" => "input", debounce: 50 %>
         </div>
         <div class="col-6" style="overflow: scroll;">
           <div v-html='input | marked'></div>
