--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,11 +16,11 @@
 
 <body class="fixed-nav bg-dark">
 
-<nav class="row navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+<nav class="row navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
   <div class="col-3">
     <%= link_to "[ADMIN]ちょっときいて呉高専", admin_root_path, class: "navbar-brand" %>
   </div>
-  <div class="offset-md-6 col-3">
+  <div class="col-9 text-right">
     <span class="navbar-text"><%= current_personality.name %>(<%= current_personality.role.t %>)</span>
     <%= link_to "ログアウト", destroy_personality_session_path(current_personality), method: :delete, data: { confirm: "ログアウトしてもいいですか？" }, class: "btn btn-light btn-sm" %>
   </div>
@@ -39,3 +39,4 @@
 </div>
 </body>
 </html>
+
