--- a/app/views/admin/jargons/_form.html.erb
+++ b/app/views/admin/jargons/_form.html.erb
@@ -29,6 +29,13 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= form.label :image, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <%= form.file_field :image %>
+    </div>
+  </div>
+
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
