fix not to add new jargon from admin

--- a/app/views/admin/jargons/show.html.erb
+++ b/app/views/admin/jargons/show.html.erb
@@ -13,4 +13,4 @@
   <dd><%= simple_format(@jargon.description) %></dd>
 </dl>
 
-<%= link_to '編集', edit_admin_jargon_path(@jargon) %>
+<%= Admin::JargonViewObject.link_to_edit(current_personality, @jargon) %>
