--- a/app/views/admin/jargons/show.html.erb
+++ b/app/views/admin/jargons/show.html.erb
@@ -5,7 +5,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= Jargon.human_attribute_name('image') %> :</strong></dt> 
-  <dd><%= image_tag @jargon.image_url %></dd>
+  <dd><%= image_tag @jargon.image_url, :size =>'300x400'  %></dd>
 </dl>
 
 <dl class="dl-horizontal">
