fontawesomeをcdnで読み込むようにした

--- a/app/views/front/app/index.html.erb
+++ b/app/views/front/app/index.html.erb
@@ -17,6 +17,7 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="<%= asset_url('logo/rectangle.png') %>"/>
     <%= render 'shared/favicon' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   </head>
 
   <body>
