--- a/app/views/admin/radios/_form.html.erb
+++ b/app/views/admin/radios/_form.html.erb
@@ -16,6 +16,15 @@
   </div>
 
   <div class="form-group row">
+    <%= form.fields_for :comic, radio.comic || radio.build_comic do |comic_form| %>
+      <%= comic_form.label :image, class: 'col-2 col-form-label' %>
+      <div class="col-10">
+        <%= comic_form.file_field :image %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="form-group row">
     <%= form.label :description, class: 'col-2 col-form-label' %>
     <div class="col-10" id="editor">
       <%= render 'admin/shared/markdown_help' %>
