--- a/app/views/admin/radios/show.html.erb
+++ b/app/views/admin/radios/show.html.erb
@@ -29,7 +29,7 @@
 
 <dl class="dl-horizontal">
   <dt><strong>4コマ漫画 :</strong></dt>
-  <dd id="comic"><%= image_tag @radio.comic.image_url(:thumb) %></dd>
+  <dd id="comic"><%= image_tag @radio.comic&.image_url(:thumb) || '' %></dd>
 </dl>
 
 <dl class="dl-horizontal">
