--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -44,6 +44,36 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <%= form.label :twitter_id, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <div class="input-group">
+        <div class="input-group-addon">@</div>
+        <%= form.text_field :twitter_id, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= form.label :instagram_id, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <div class="input-group">
+        <div class="input-group-addon">@</div>
+        <%= form.text_field :instagram_id, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= form.label :facebook_id, class: 'col-2 col-form-label' %>
+    <div class="col-10">
+      <div class="input-group">
+        <div class="input-group-addon">https://www.facebook.com/</div>
+        <%= form.text_field :facebook_id, class: 'form-control' %>
+      </div>
+    </div>
+  </div>
+
   <div class="actions">
     <%= form.submit class: 'btn btn-primary' %>
   </div>
