add NotoSans JP

--- a/app/views/front/app/index.html.erb
+++ b/app/views/front/app/index.html.erb
@@ -18,6 +18,7 @@
     <meta name="twitter:image" content="<%= asset_url('logo/rectangle.png') %>"/>
     <%= render 'shared/favicon' %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700,900&display=swap&subset=japanese" rel="stylesheet">
   </head>
 
   <body>
