change: [affiliation_name, affiliation_details] -> [organization, position]

--- a/app/views/admin/personalities/_form.html.erb
+++ b/app/views/admin/personalities/_form.html.erb
@@ -23,16 +23,16 @@
   </div>
 
   <div class="form-group row">
-    <%= form.label :affiliation_name, class: 'col-2 col-form-label' %>
+    <%= form.label :organization, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.text_field :affiliation_name, class: 'form-control' %>
+      <%= form.text_field :organization, class: 'form-control' %>
     </div>
   </div>
 
   <div class="form-group row">
-    <%= form.label :affiliation_details, class: 'col-2 col-form-label' %>
+    <%= form.label :position, class: 'col-2 col-form-label' %>
     <div class="col-10">
-      <%= form.text_field :affiliation_details, class: 'form-control' %>
+      <%= form.text_field :position, class: 'form-control' %>
     </div>
   </div>
 
