--- a/app/views/admin/personalities/show.html.erb
+++ b/app/views/admin/personalities/show.html.erb
@@ -9,13 +9,13 @@
 </dl>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= Personality.human_attribute_name('affiliation_name') %> :</strong></dt>
-  <dd><%= @personality.affiliation_name %></dd>
+  <dt><strong><%= Personality.human_attribute_name('organization') %> :</strong></dt>
+  <dd><%= @personality.organization %></dd>
 </dl>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= Personality.human_attribute_name('affiliation_details') %> :</strong></dt>
-  <dd><%= @personality.affiliation_details %></dd>
+  <dt><strong><%= Personality.human_attribute_name('position') %> :</strong></dt>
+  <dd><%= @personality.position %></dd>
 </dl>
 
 <dl class="dl-horizontal">
