--- a/app/views/front/app/index.html.erb
+++ b/app/views/front/app/index.html.erb
@@ -24,5 +24,6 @@
   <body>
     <div id="app"></div>
     <%= webpack_javascript_include_tag('app') %>
+    <%= webpack_javascript_include_tag('vendor') %>
   </body>
 </html>
